<resources>
    <string name="app_name">Perfect Popcorn Popper</string>
    <string name="logo">logo</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="pop_status">Pop Status</string>
    <string name="idle">Idle</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect Bluetooth Device</string>
    <string name="hello_blank_fragment">Settings fragment</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="night_mode">Night Mode</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="enable_location_services">Enable Location Services</string>
    <string name="connected">Connected:</string>
    <string name="tap_to_connect"><u>Tap To Connect</u></string>
    <string name="searching_for_bluetooth_devices">Searching For Bluetooth Devices</string>
    <string name="pops">Pops:</string>

</resources>